--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8449848092304327"
+     crossorigin="anonymous"></script>
+  </head>
+  <body>
+    hello world
+  </body>
+</html>
+
