--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>CodeBrunch Main Page</title>
+    <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8449848092304327"
      crossorigin="anonymous"></script>
   </head>
-  <body>
-    hello world
+  <body class="body">
+    <div>
+      hello world
+    </div>
   </body>
 </html>
 
