--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>CodeBrunch Main Page</title>
-    <link rel="stylesheet" href="style.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CodeBrunch Main Page - Baramy SubPage Combined</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8449848092304327"
      crossorigin="anonymous"></script>
-  </head>
-  <body class="body">
-    <div>
-      hello world
-    </div>
-  </body>
+</head>
+<body>
+    <h1>Welcome to A Repository's Combined Page!</h1>
+    <!-- Include B repository's static webpage using an iframe or other method -->
+    <iframe src="https://username.github.io/B-repository/" width="100%" height="600px"></iframe>
+</body>
 </html>
 
