--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Welcome to A Repository's Combined Page!</h1>
     <!-- Include B repository's static webpage using an iframe or other method -->
-    <iframe src="https://username.github.io/B-repository/" width="100%" height="600px"></iframe>
+    <iframe src="https://codebrunch.github.io/baramy/" width="100%" height="1000px"></iframe>
 </body>
 </html>
 
