--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeBrunch Main Page - Baramy SubPage Combined</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8449848092304327"
-     crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GitHub 블로그</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to A Repository's Combined Page!</h1>
-    <!-- Include B repository's static webpage using an iframe or other method -->
-    <iframe src="https://codebrunch.github.io/baramy/" width="100%" height="1500px"></iframe>
+  <header>
+    <h1>블로그 제목</h1>
+    <!-- 다른 헤더 내용들 추가 -->
+  </header>
+
+  <main id="posts-list">
+    <!-- 여기에 포스트 목록이 동적으로 삽입됩니다 -->
+  </main>
+
+  <footer>
+    <!-- 푸터 내용 추가 -->
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
-
