--- a/index.html
+++ b/index.html
@@ -3,23 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub 블로그</title>
+  <title>Markdown 파일 보기</title>
+  <!-- 여기에 스타일 시트 링크 추가 -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>블로그 제목</h1>
-    <!-- 다른 헤더 내용들 추가 -->
-  </header>
+  <div id="markdown-container">
+    <!-- 여기에 Markdown 파일 내용이 동적으로 삽입됩니다 -->
+  </div>
 
-  <main id="posts-list">
-    <!-- 여기에 포스트 목록이 동적으로 삽입됩니다 -->
-  </main>
+  <script>
+    // Markdown 파일을 HTML로 변환하여 적용하는 함수
+    function renderMarkdown(path) {
+      fetch(path)
+        .then(response => response.text())
+        .then(markdownText => {
+          // marked.js를 사용하여 Markdown을 HTML로 변환
+          const htmlContent = marked(markdownText);
+          // HTML 콘텐츠를 마크다운 컨테이너에 삽입
+          document.getElementById('markdown-container').innerHTML = htmlContent;
+        })
+        .catch(error => console.error('Markdown 파일을 불러오는 중 오류가 발생했습니다:', error));
+    }
 
-  <footer>
-    <!-- 푸터 내용 추가 -->
-  </footer>
-
-  <script src="script.js"></script>
+    // 페이지 로드 후 Markdown 파일 로드
+    window.addEventListener('DOMContentLoaded', () => {
+      renderMarkdown('your-markdown-file.md'); // 여기에 Markdown 파일 경로를 입력하세요
+    });
+  </script>
 </body>
 </html>
