--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Markdown 파일 보기</title>
-  <!-- 여기에 스타일 시트 링크 추가 -->
+  <title>GitHub 블로그</title>
   <link rel="stylesheet" href="style.css">
+  <!-- marked.js 로드 -->
+  <script src="path/to/marked.min.js"></script>
 </head>
 <body>
-  <div id="markdown-container">
-    <!-- 여기에 Markdown 파일 내용이 동적으로 삽입됩니다 -->
-  </div>
+  <header>
+    <h1>블로그 제목</h1>
+    <!-- 다른 헤더 내용들 추가 -->
+  </header>
+
+  <main id="posts-list">
+    <!-- 여기에 포스트 목록이 동적으로 삽입됩니다 -->
+  </main>
+
+  <footer>
+    <!-- 푸터 내용 추가 -->
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
